# label_decoding

./: Cargo.toml  README  circuit.circom  onetimesetup.mjs  poseidon.mjs  prove.mjs  script.py  utils.circom  verify.mjs
benches/: halo2_proof_generation.rs  testbench.rs
circom/: README  circuit.circom  circuit.r1cs  onetimesetup.mjs  package.json  prove.mjs  verify.mjs
circom/circuit_js/: circuit.wasm
derive-macro/: Cargo.toml
derive-macro/src/: lib.rs
labelsum/: Cargo.toml  circuit.r1cs  script.py
labelsum/src/: lib.rs  onetimesetup.rs  prover.rs  provernode.rs  verifier.rs  verifiernode.rs
src/: label.rs  lib.rs  main.rs  onetimesetup.rs  prover.rs  proverhalo2.rs  provernode.rs  utils.rs  verifier.rs
src/halo2_backend/: circuit.rs  mod.rs  onetimesetup.rs  poseidon.rs  poseidon_spec.rs  prover.rs  utils.rs  verifier.rs
src/snarkjs_backend/: mod.rs  onetimesetup.rs  poseidon.rs  provernode.rs  verifiernode.rs
