[package]
name = "labelsum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "labelsum"

[dependencies]
num = { version = "0.4"}
rand = "0.8.5"
json = "0.12.4"
aes = { version = "0.7.5", features = [] }
cipher = "0.3"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
rand_chacha = "0.3"
sha2 = { version = "0.10.1", features = ["compress"] }
lazy_static = "1.4.0"
regex = "1.6.0"
ark-bn254 = { git = "https://github.com/arkworks-rs/curves" }
ark-ff = { git = "https://github.com/arkworks-rs/algebra" }
# using arbitrary Poseidon rate is not possible in crates.io
# version "0.3.0" of ark-sponge 
ark-sponge = { git = "https://github.com/arkworks-rs/sponge", default-features = false }

# force all our dependencies to also use arkworks from github
[patch.crates-io]
ark-std = { git = "https://github.com/arkworks-rs/std" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra" }
ark-ff = { git = "https://github.com/arkworks-rs/algebra" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra" }
